Improved rank calculation algorithm
Changed font to "Source Code Pro", improved rank calculation to determine rank before first hit.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <div class="full">
         <span id="grade">X</span>
         <div class="panel">
-            <div class="PlayStats">  
-                <span id="unstableRate">0</span> UR
+            <div class="PlayStats"> 
+                <div id="urBox">
+                    <span id="unstableRate">0</span> UR
+                </div> 
                 <div class="ppcounterbox">
                     <span id="ppcounter">0</span> pp
                 </div>
@@ -20,12 +22,15 @@
             <div class="hits">
                 <div class="h100box">
                     <span id="h100">0</span>
+                    <div class="hitsUnderline" id="hunUnderline"></div>
                 </div>
                 <div class="h50box">
                     <span id="h50">0</span>
+                    <div class="hitsUnderline" id="fivUnderline"></div>
                 </div>
                 <div class="hmissbox">
                     <span id="h0">0</span>
+                    <div class="hitsUnderline" id="missUnderline"></div>
                 </div>
             </div>
         </div>
